--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@ Information</font></a><font size="3" face="Times New Roman">] [</font><a href="h
       </tr>
       <tr>
         <td height="21" bordercolor="white" width="212"><font size="3" face="Times New Roman"><b>Classroom and Class Time1:</b></font></td>
-        <td height="21" bordercolor="white" width="956"><font size="3" color="green" face="Times New Roman">XIAN Ⅱ-122, Xianlin Campus. &#8195 &#8195 &#8195 &#8195 &#8195 &#8195 &#8195 2:00-4:50 Tuesday, Autumn Semester, 2024 &#8199 &#8199 QQ group number: 730295643</font></td>
+        <td height="21" bordercolor="white" width="956"><font size="3" color="green" face="Times New Roman">XIAN I-107, Xianlin Campus. &#8195 14:00-16:50 Tuesday, Autumn Semester, 2025 &#8194 &#8194 QQ group number: 580737464</font></td>
       </tr>
       <tr>
         <td height="21" bordercolor="white" width="212"><font size="3" face="Times New Roman"><b>Classroom and Class Time2:</b></font></td>
-        <td height="21" bordercolor="white" width="956"><font size="3" color="blue" face="Times New Roman">GUAN(YI FU HALL) Ⅲ-201, Gulou Campus.  &#8195 &#8195 2:00-4:50 Thursday, Autumn Semester, 2024 &#8195 QQ group number: 328465714</font></td>
+        <td height="21" bordercolor="white" width="956"><font size="3" color="blue" face="Times New Roman">FEI A-310, Gulou Campus.  &#8195 &#8195 14:00-16:50 Thursday, Autumn Semester, 2025 &#8193 QQ group number: 792340423</font></td>
       </tr>
       <tr>
         <td height="21" bordercolor="white" width="212"><font size="3" face="Times New Roman"><b></b></font></td>
