--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@ Information</font></a><font size="3" face="Times New Roman">] [</font><a href="h
 </b></font><a name="Slides" id="Slides"><font color="black" size="4" face="Times New Roman"><b>Slides (Slides will be available one week before the class)</b></font></a> 
 <blockquote>
   <p class="STYLE21"><u><a href="https://fla25course.github.io/doc/ClassIntro_web.pptx">Class Intro</a></u>  </p>
-  <p class="STYLE21"><u><a href="https://fla25course.github.io/doc/Preliminary.ppt">Preliminary Knowledge</a></u></p>
-  <!-- <p class="STYLE21"><strong><em>Models:</em></strong></p> -->
-    <!-- <p class="STYLE21"><u><a href="https://fla25course.github.io/doc/FA.pptx">Finite Automata</a></u></p>
-    <p class="STYLE21"><u><a href="https://fla25course.github.io/doc/RE.pptx">Regular Expression</a></u></p>
+  <!-- <p class="STYLE21"><u><a href="https://fla25course.github.io/doc/Preliminary.ppt">Preliminary Knowledge</a></u></p> -->
+  <p class="STYLE21"><strong><em>Models:</em></strong></p>
+    <p class="STYLE21"><u><a href="https://fla25course.github.io/doc/FA.pptx">Finite Automata</a></u></p>
+    <!-- <p class="STYLE21"><u><a href="https://fla25course.github.io/doc/RE.pptx">Regular Expression</a></u></p>
     <p class="STYLE21"><u><a href="https://fla25course.github.io/doc/CFL.pptx">Context Free Grammar</a></u></p>
     <p class="STYLE21"><u><a href="https://fla25course.github.io/doc/PDA.pptx">Pushdown Automata</a></u></p>
     <p class="STYLE21"><u><a href="https://fla25course.github.io/doc/CFL2.pptx">Properties of CFL</a></u></p>
